# SentriAI

./: README.md  pyproject.toml
dashboards/grafana/: dashboards.json
docs/: ARCHITECTURE.md  DEPLOYMENT_RUNBOOK.md
infra/terraform/: cloud
notebooks/: exploratory.ipynb
rules/detections/: suspicious_login.yml
rules/threat_feed/: feeds.yml
scripts/ops/: backup_archives.sh
scripts/python/: example_collector.py  example_parser.py  run_e2e_local.py
siem-platform/: README.md  requirements.txt
siem-platform/.github/: ISSUE_TEMPLATE
siem-platform/configs/: alerting.yml  collectors.yml  ingestion.yml  logging.yml
siem-platform/dashboards/kibana/: saved_objects.json
siem-platform/docs/: ARCHITECTURE.md  CONTRIBUTING.md  ONCALL_PLAYBOOK.md  TECHNOLOGY_RECOMMENDATIONS.md
siem-platform/examples/: sample_alerts.json
siem-platform/infra/docker/: docker-compose.yml
siem-platform/infra/helm/: siem-chart
siem-platform/models/training/: training_data.csv
siem-platform/notebooks/: ml_workflow.ipynb
siem-platform/observability/loki/: loki-config.yml
siem-platform/observability/prometheus/: prometheus.yml
siem-platform/rules/detections/: lateral_movement.yml
siem-platform/scripts/ops/: deploy_local.sh
siem-platform/scripts/python/: train_model.py
siem-platform/src/alerting/: alert_dispatcher.py  alert_rules.py
src/collectors/: cloud_events_collector.py  syslog_collector.py
src/enrichment/: geoip_enricher.py
src/ml/: anomaly_detection.py  model_training.py
src/parsers/: json_log_parser.py
tests/e2e/: test_alert_flow.py
(+18 files in other folders)
