[tool]
name = "siem-platform"
version = "0.1.0"
description = "A scalable and intelligent Security Information and Event Management (SIEM) system."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
elasticsearch = "^7.14.0"
pydantic = "^1.8.2"
requests = "^2.26.0"
python-dotenv = "^0.19.1"
geoip2 = "^4.0.0"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
isort = "^5.9.3"

[tool.poetry.scripts]
run = "src.pipeline.ingest_service:main"